source/stylesheets/main.scss
/* ... */
/* embed specific styles end */
/* slab container top */
section.header {
  margin: 0 2.75rem 3.625rem;
  text-align: left;
  @media screen and (min-width: 768px) {
    text-align: center;
    margin: 0 2.75rem 4.125rem;
  }
  @media screen and (min-width: 768px) {
    text-align: center;
    margin: 0 2.75rem 5.375rem;
  }

  h2 {
    color: $dk-grey;
    margin-bottom: 0.75rem;
    @media screen and (min-width: 768px) {
      margin-bottom: 1.125rem;
    }
    padding: 0.625rem 0 0;
    @media screen and (min-width: 1440px) {
      font-size: 1.375rem;
      line-height: 1.6875rem;
    }
  }

  .button-link {
    color: $grey !important;
    font-size: 1.0625rem;
    //display: inline-block;
    @media screen and (min-width: 1440px) {
      font-size: 0.875rem;
      margin-left: 1rem;
    }

    &:hover {
      color: $white !important;
      background: $grey;
    }
  }

  .mobile-only {
    display: inline-block;
    @media screen and (min-width: 1440px) {
      display: none;
    }
  }

  .xl-only {
    display: none;
    @media screen and (min-width: 1440px) {
      display: inline;
    }
  }
}

section.slab {
  background: #FA0F00;
  // background-repeat: no-repeat;
  // background-position: center top;
  color: $white;
  margin: 0 0 4.375rem;
  padding: 1.125rem 0 8.75rem;
  @media screen and (min-width: 1440px) {
    padding: 1.125rem 2.75rem 8.75rem;
  }

  h1,
  h2 {
    color: $white;
  }
}
/* slab container top end */
/* home cards */
section.home-card {
  margin: -11rem 2.75rem 4.375rem;

  .card.blanche {
    background: $white 0% 0% no-repeat padding-box;
    box-shadow: 0 3px 26px #00000010;
    border-radius: 10px;
    margin: 0 1.25rem 1.5rem;
    min-height: 24rem;
    width: 17.75rem !important;
    @media screen and (min-width: 768px) and (max-width: 1439px) {
      text-align: center;
      min-height: 24rem;
      width: 21.875rem !important;
    }
    @media screen and (min-width: 1440px) {
      min-height: 23.5rem;
      width: 18.125rem !important;
    }
    padding: 2.25rem 2rem 1.875rem;
    position: relative;
    h2 {
      text-align: center;
    }

    p {
      margin: 2rem 0 0;
      text-align: center;

      &:first-of-type {
        margin: 0;
      }
    }

    .callout-item {
      bottom: 1.875rem;
      position: absolute;
      width: calc(100% - 4rem);
      @media screen and (min-width: 768px) {
        width: 13.75rem;
      }
      @media screen and (min-width: 1440px) {
        width: 17.75rem;
      }

      p {
        margin: 0;
        text-align: center;

        a {
          display: inline-block;
          margin: 0 0.35rem;

          &:first-of-type {
            margin: 0 0.35rem 0 0;
          }
        }
      }
    }
  }
  @media screen and (min-width: 768px) and (max-width: 1439px) {
    display: flex;
    margin: -11rem auto 4.375rem;
    max-width: 38.5rem;
  }
  @media screen and (min-width: 1440px) {
    display: flex;
    margin: -11rem auto 4.375rem;
    max-width: 46.125rem;
  }
}
/* ... */

